# Ai-notebook

./: .gitignore  .replit  CLI_BACKENDS_GUIDE.md  MANIFEST.in  README.md  example_config.yaml  improved_system_prompt.md  main.py  pyproject.toml  replit.md  requirements.txt  self_controlled_rl_idea.md  setup.py  test_debug.py  test_tools.py
attached_assets/: Pasted--Cli-Agent-Real-World-Example-of-Incomplete-Implementat_1765518562068.txt
prompts/: agent2_implementation.txt  agent2_testing.txt
sandbox/: .completeness_state.json
src/: agent.py  agents.py  cli.py  config.py  context.py  llm.py  llm_backend.py  logger.py  memory.py  orchestrator.py  tools.py  ui.py
start/workspace/: .completeness_state.json  idea.md
tests/: test_improvements.py  test_improvements_simple.py
