[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "completeness-loop"
version = "1.0.0"
description = "Autonomous coding agent with completeness verification and multi-agent review system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = [
    "autonomous",
    "coding",
    "agent",
    "llm",
    "verification"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
completeness-loop = "src.cli:main"
cl-agent = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["*.py"]
